style.css
body {overflow-x: hidden;}
.container {max-width:1050px;}
.row {margin-left:0; margin-right:0;}
.content {margin-top: 200px;}
h1 {font-family: 'PT Sans', sans-serif; color:#203939; font-weight:700; text-transform: uppercase;}
h2 {font-family: 'PT Sans Caption', sans-serif; color: #F79973;}
h3 {font-family: 'PT Sans', sans-serif; color:#F79973;}

p {font-family: 'PT Serif', serif; color: #203939; font-size:16px;}

a {color:#F79973;}
a:hover {text-decoration: none;}

#top-svg {height:140px; margin-bottom:10px; position: relative; right:15%; overflow-x: hidden;}
#bottom-svg {height:140px; margin-bottom:0; position: relative; right:15%; overflow-x: hidden;}

@media (max-width: 767px) {
	.logistics {margin-top: 25px; margin-bottom:25px;}
	.content {margin-top:25px;}

	img {width:100%;}
}
@media (max-width: 991px) {
	h1 {font-size: 42px;}
	h2 {font-size: 28px;}
}
@media (min-width: 768px)  {
	#top-svg {height:220px; margin-bottom:30px; position: relative; right:50%; position:relative;}	
	#bottom-svg {height:220px; margin-bottom:0; position: relative; right:42%;}

	img {width: 70%;}
}

@media (min-width: 992px) {
	h1 {font-size: 58px;}
	h2 {font-size: 32px;}
	#top-svg {height:320px; margin-bottom:30px; position: relative; right:50%; position:relative;}	
	#bottom-svg {height:320px; margin-bottom:0; position: relative; right:42%;}
}

@media (min-width: 1200px) {
	h1 {font-size: 64px;}
	h2 {font-size: 32px;}
}

header h2 {color: #203939;}
#project-title {margin-bottom:0; margin-top:0;}
#project-description {margin-top: 0;}
#project-description-more {margin-left:0; margin-right:0; padding-left:0; padding-right:0;}
#data-links {margin-top:120px;}
#data-links,#data-links-mobile a {font-size:32px; font-family: 'PT Sans', sans-serif;}
#data-links div{padding-left:0;}

.logistics * {margin-top:0; margin-bottom:0;}
.logistics h1 {font-family:'PT Sans Caption', sans-serif; color: #203939; margin-top: 10px;
				font-size:26px; font-weight:400; text-transform: Capitalize;}
.logistics h2 {font-family: 'PT Sans Narrow', sans-serif; font-weight:700; color: #203939; font-size: 48px;}
.logistics p {font-family: 'PT Sans', sans-serif; margin-bottom:5px;}
.logistics span {font-family: 'PT Sans Caption', sans-serif; font-size: 12px; margin-bottom:5px;}
.logistics iframe {margin-top: 10px;}




div.content p {margin-bottom: 20px;}

.caption {font-size: 12px;}

div.content .citations p {font-family: 'PT Sans Caption', sans-serif; color: #203939; font-size: 12px; 
				margin-bottom: 5px;}

.social a {display: inline; margin-right:10px;}
.social img {width:50px;}



/* LANDIN PAGE STYLING */

#ellie {font-family: 'PT Serif', serif; font-weight:400; color:#203939; text-align: center;
			font-size:40px; text-transform: capitalize;}

#landing-page a {font-size: 30px; color: #203939;}
#landing-page a:hover {color:#F79973;}
#landing-page p {text-align: center;}
#landing-page section {margin-top:50px;}

@media (max-width: 767px) {
	#landing-page a {font-size: 20px;}
}

